force-app/main/default/objects/IT_Request__c/IT_Request__c.object-meta.xml
<CustomObject>
    <label>IT Request</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>IT Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>