force-app/main/default/objects/IT_Request__c/fields/Assigned_Tier__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tier__c</fullName>
    <label>Assigned Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
                <default>true</default>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>