force-app/main/default/objects/IT_Request__c/fields/Due_By__c.field-meta.xml
<CustomField>
    <fullName>Due_By__c</fullName>
    <label>Due By</label>
    <type>DateTime</type>
    <inlineHelpText
  >SLA deadline based on Priority at creation time (Critical=4h, High=8h, Medium=24h, Low=72h)</inlineHelpText>
</CustomField>