force-app/main/default/objects/IT_Request__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <label>Employee Email</label>
    <type>Email</type>
    <inlineHelpText>Email address for status notifications</inlineHelpText>
    <externalId>true</externalId>
</CustomField>