force-app/main/default/objects/IT_Request__c/fields/First_Response_At__c.field-meta.xml
<CustomField>
    <fullName>First_Response_At__c</fullName>
    <label>First Response At</label>
    <type>DateTime</type>
    <inlineHelpText
  >Timestamp when Status first changed from New</inlineHelpText>
</CustomField>