force-app/main/default/objects/IT_Request__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <label>Resolved At</label>
    <type>DateTime</type>
    <inlineHelpText>Timestamp when Status became Resolved</inlineHelpText>
</CustomField>