force-app/main/default/objects/IT_Request__c/fields/SLA_Breach_Notified__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Notified__c</fullName>
    <label>SLA Breach Notified</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText
  >Indicates if breach notification has been sent to prevent duplicate alerts</inlineHelpText>
</CustomField>