force-app/main/default/objects/IT_Request__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <formula>IF(ISBLANK(Due_By__c), "Not Set",
  IF(NOT(ISBLANK(Resolved_At__c)),
    IF(Resolved_At__c &lt;= Due_By__c, "Met", "Missed"),
    IF(NOW() &gt; Due_By__c, "Breached",
      IF(Due_By__c = CreatedDate, "At Risk",
        IF((Due_By__c - NOW()) / (Due_By__c - CreatedDate) &lt; 0.25, "At Risk", "On Track")
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>