force-app/main/default/objects/IT_Request__c/fields/Time_To_Resolution_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Resolution_Hours__c</fullName>
    <label>Time To Resolution (Hours)</label>
    <formula
  >IF(NOT(ISBLANK(Resolved_At__c)), (Resolved_At__c - CreatedDate) * 24, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>