force-app/main/default/objects/IT_Request__c/listViews/All_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_Tier__c</columns>
    <columns>CREATEDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>All Open Tickets</label>
</ListView>