force-app/main/default/objects/IT_Request__c/listViews/Escalated_Tickets.listView-meta.xml
<ListView>
    <fullName>Escalated_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_Tier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </filters>
    <label>Escalated Tickets</label>
</ListView>