force-app/main/default/objects/IT_Request__c/listViews/My_Recent_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Recent_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_Tier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Recent Tickets</label>
</ListView>