force-app/main/default/objects/IT_Request__c/listViews/SLA_Breach_Watchlist.listView-meta.xml
<ListView>
    <fullName>SLA_Breach_Watchlist</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Due_By__c</columns>
    <columns>SLA_Status__c</columns>
    <columns>Assigned_Tier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SLA_Status__c</field>
        <operation>equals</operation>
        <value>Breached,At Risk</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>SLA Breach Watchlist</label>
</ListView>