force-app/main/default/objects/IT_Request__c/listViews/Tier_1_Queue.listView-meta.xml
<ListView>
    <fullName>Tier_1_Queue</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_Tier__c</columns>
    <columns>CREATEDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Tier__c</field>
        <operation>equals</operation>
        <value>Tier 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>Tier 1 Queue</label>
</ListView>